[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Multmenu.gd" type="Script" id=1]

[node name="Multmenu" type="Control"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 444.099
margin_top = 203.105
margin_right = 589.099
margin_bottom = 325.105
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "CREATE"

[node name="Button2" type="Button" parent="."]
margin_left = 453.915
margin_top = 457.997
margin_right = 595.915
margin_bottom = 572.997
size_flags_horizontal = 0
size_flags_vertical = 0
text = "JOIN"

[node name="Label" type="Label" parent="."]
margin_left = 269.575
margin_top = 145.367
margin_right = 318.575
margin_bottom = 163.367
text = "NAME:"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 321.0
margin_top = 135.0
margin_right = 735.0
margin_bottom = 176.0

[node name="Label2" type="Label" parent="."]
margin_left = 34.0
margin_top = 526.0
margin_right = 74.0
margin_bottom = 556.0

[node name="Label3" type="Label" parent="."]
margin_left = 282.099
margin_top = 386.633
margin_right = 331.099
margin_bottom = 400.633
text = "SERVER:"

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 341.0
margin_top = 372.0
margin_right = 731.0
margin_bottom = 412.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="TextEdit2" to="." method="_on_TextEdit2_text_changed"]
